Prevent content from overflowing

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,7 @@ input[type="color"] {
     display: flex;
     flex: 1 1 90%;
     max-height: 10%;
+    overflow: hidden;
 }
 
 
@@ -104,7 +105,6 @@ input[type="color"] {
 }
 
 .drawing-pad > .grid {
-    border: 1px solid black;
     box-sizing: border-box;
     user-select: none;
 }
